# pokemon-training

./: .gitignore  .pr-loop-test.md  CLAUDE.md  EXPERIMENTS.md  LEAKY-EXPERIMENTS.md  Makefile  README.md  pyproject.toml  scale_index.json  shiny_index.json  test_split_manifest.json
pokemon_training/: __init__.py  config.py  data.py  evaluation.py  experiment.py  model.py  train.py
scripts/: cnn_feature_probe.py  confusion_study.py  create_test_split.py  data_processing.py  data_scraping.py  dinov2_probe.py  duplicate_audit.py  ensemble.py  final_test_evaluation.py  generate_scale_manifest.py  generate_shiny_manifest.py  migrate_clean_runs.py  seed_agreement_study.py  shape_descriptor_baseline.py  training.py  tta_selection.py
